# adana-std

./: Cargo.toml  README.md  TODO.md
.github/workflows/: release.yml
date/: Cargo.toml
date/src/: lib.rs
fs/: Cargo.toml
fs/src/: fs.rs  lib.rs
http/: Cargo.toml  README.md
http/example/: server.adana
http/example/public/: index.html
http/example/public/js/: app.js  todo-item.js
http/src/: lib.rs
io/: Cargo.toml
io/src/: lib.rs
process/: Cargo.toml
process/src/: lib.rs
server/: Cargo.toml  README.md
server/src/: lib.rs
uuid/: Cargo.toml
uuid/src/: lib.rs
