[workspace]
members = ["fs", "io", "process", "date"]
resolver = "2"

[workspace.dependencies]
adana-script-core = "0.17.8"
anyhow = "1.0.81"
chrono = "0.4.35"

[workspace.package]
version = "0.17.8"
authors = ["Nordine Bittich"]
description = "Adana standard library"
documentation = "https://github.com/nbittich/adana-std"
repository = "https://github.com/nbittich/adana-std"
rust-version = "1.76"
edition = "2021"
license = "MIT"

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Link Time Optimization (LTO)
codegen-units = 1 # Set this to 1 to allow for maximum size reduction optimizations:
panic = 'abort'   # removes the need for this extra unwinding code.
strip = "symbols"
