[workspace]
members = ["fs", "io", "process", "date", "http", "uuid"]
resolver = "2"

[workspace.dependencies]
#adana-script-core = "0.17.11"
adana-script-core = "0.18.6"
tiny_http = "0.12.0"
anyhow = "1.0.95"
chrono = "0.4.39"
url = "2.5.4"
multipart2 = "0.19.1"
form_urlencoded = "1.2.1"
mime_guess="2.0.5"
uuid="1.11.0"
[workspace.package]

authors = ["Nordine Bittich"]
version = "0.18.6"
description = "Adana standard library"
documentation = "https://github.com/nbittich/adana-std"
repository = "https://github.com/nbittich/adana-std"
rust-version = "1.83"
edition = "2021"
license = "MIT"

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Link Time Optimization (LTO)
codegen-units = 1 # Set this to 1 to allow for maximum size reduction optimizations:
panic = 'abort'   # removes the need for this extra unwinding code.
strip = "symbols"
