[package]
name = "adana-std-process"
version = { workspace = true }
edition = { workspace = true }


[lib]
crate-type = ["dylib"]

[dependencies]
adana-script-core = { git = "https://github.com/nbittich/adana-script-core.git" }

#adana-script-core = { workspace = true }
anyhow = { workspace = true }
