[package]
name = "adana-std-uuid"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }

[lib]
crate-type = ["dylib"]

[dependencies]
adana-script-core = { workspace = true }
anyhow = { workspace = true }
uuid = {workspace=true, features=["v4"]}
